# face_detect_n_track

./: CMakeLists.txt  LICENSE  README.md  VideoFaceDetector.cpp  VideoFaceDetector.h  main.cpp
